--- a/Quest.API/Quest.API.csproj
+++ b/Quest.API/Quest.API.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyVersion>2020.3.14.1612</AssemblyVersion>
+    <FileVersion>2020.1.3.1612</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
