--- a/Quest.Application/Quest.Application.csproj
+++ b/Quest.Application/Quest.Application.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyVersion>2020.3.14.1602</AssemblyVersion>
+    <FileVersion>2020.1.3.1602</FileVersion>
   </PropertyGroup>
 
 </Project>
