--- a/Quest.Application/Quest.Application.csproj
+++ b/Quest.Application/Quest.Application.csproj
@@ -6,4 +6,20 @@
     <FileVersion>2020.1.3.1730</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Tasks\NewFolder\**" />
+    <EmbeddedResource Remove="Tasks\NewFolder\**" />
+    <None Remove="Tasks\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Quest.DAL\Quest.DAL.csproj" />
+    <ProjectReference Include="..\Quest.Domain\Quest.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
