--- a/Quest.API/Quest.API.csproj
+++ b/Quest.API/Quest.API.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\Quest.DAL\Quest.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\SoloPlayers" />
+  </ItemGroup>
+
 </Project>
