--- a/Quest.API/Quest.API.csproj
+++ b/Quest.API/Quest.API.csproj
@@ -33,7 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\SoloPlayers" />
+    <Folder Include="BindingModels\Participants" />
+    <Folder Include="ResourceModels\SoloPlayers" />
   </ItemGroup>
 
 </Project>
