--- a/Quest.Application/Quest.Application.csproj
+++ b/Quest.Application/Quest.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis.Auth" Version="1.45.0" />
+    <PackageReference Include="LazyCache.AspNetCore" Version="2.0.4" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
